Clean up all NLS tags in the source since NLS is removed from many projects Case: SVY-5982